# dealio

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  Dependencies.cmake  ProjectOptions.cmake  README.md  README_dependencies.md  README_docker.md
.github/template/: README.md
.github/workflows/: ci.yml  template-janitor.yml
cmake/: Cache.cmake  CompilerWarnings.cmake  Cuda.cmake  Dependencies.cmake  Doxygen.cmake  Hardening.cmake  InterproceduralOptimization.cmake  LibFuzzer.cmake  Linker.cmake  PackageProject.cmake  PreventInSourceBuilds.cmake  Sanitizers.cmake  StaticAnalyzers.cmake  Tests.cmake
locales/: my-domain.pot
locales/de/: my-domain.mo  my-domain.po
locales/pl/: my-domain.mo  my-domain.po
src/: CMakeLists.txt  TestPrint.cpp  TestPrint.hpp  main.cpp
